[gd_scene load_steps=11 format=3 uid="uid://b5snworusylr7"]

[ext_resource type="Script" uid="uid://c5eyhkrlkit2u" path="res://scenes/hud/game_hud.gd" id="1_h4kfc"]
[ext_resource type="Texture2D" uid="uid://bv5c7gsq8fb6t" path="res://sprites/level_flag.png" id="2_7xq0w"]
[ext_resource type="Texture2D" uid="uid://dmiy8vydpxivs" path="res://sprites/revive_heart.png" id="4_1rlcw"]
[ext_resource type="PackedScene" uid="uid://b6w0clggia3xi" path="res://scenes/hud/star.tscn" id="5_7jlme"]
[ext_resource type="LabelSettings" uid="uid://bahcm62l22avs" path="res://scenes/hud/life_hud_label_settings.tres" id="6_7xq0w"]
[ext_resource type="Texture2D" uid="uid://cnravmbvw4fqm" path="res://sprites/enemy_icon.png" id="6_jedst"]
[ext_resource type="LabelSettings" uid="uid://cgdggutjnoqh1" path="res://scenes/hud/star_hud_label_settings.tres" id="7_1rlcw"]
[ext_resource type="FontFile" uid="uid://cwbnydkueulh7" path="res://fonts/battle_city.otf" id="7_7xq0w"]
[ext_resource type="LabelSettings" uid="uid://dv82brw04afb0" path="res://scenes/hud/label_settings.tres" id="7_jedst"]

[sub_resource type="LabelSettings" id="LabelSettings_1rlcw"]
font = ExtResource("7_7xq0w")
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="Game Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4kfc")

[node name="level_flag" type="Sprite2D" parent="."]
position = Vector2(24, 204)
texture = ExtResource("2_7xq0w")
centered = false

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 224.0
offset_right = 40.0
offset_bottom = 232.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="revive_heart" type="Sprite2D" parent="."]
position = Vector2(304, 212)
texture = ExtResource("4_1rlcw")

[node name="Revives" type="Label" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 224.0
offset_right = 312.0
offset_bottom = 232.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="AllBots1" type="Node2D" parent="."]
position = Vector2(24, 32)

[node name="EnemyIcon" type="Sprite2D" parent="AllBots1"]
position = Vector2(4, 4)
texture = ExtResource("6_jedst")

[node name="x" type="Label" parent="AllBots1"]
offset_left = 8.0
offset_right = 16.0
offset_bottom = 8.0
text = "x"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="Bots" type="Label" parent="AllBots1"]
offset_top = 12.0
offset_right = 16.0
offset_bottom = 20.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="AllBots2" type="Node2D" parent="."]
position = Vector2(296, 32)

[node name="EnemyIcon" type="Sprite2D" parent="AllBots2"]
position = Vector2(4, 4)
texture = ExtResource("6_jedst")

[node name="x" type="Label" parent="AllBots2"]
offset_left = 8.0
offset_right = 16.0
offset_bottom = 8.0
text = "x"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="Bots" type="Label" parent="AllBots2"]
offset_top = 12.0
offset_right = 16.0
offset_bottom = 20.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="LifeHudP1" type="Node2D" parent="."]
position = Vector2(24, 72)

[node name="Title" type="Label" parent="LifeHudP1"]
offset_right = 16.0
offset_bottom = 8.0
text = "1P"
label_settings = ExtResource("6_7xq0w")

[node name="Lifes" type="Label" parent="LifeHudP1"]
offset_top = 12.0
offset_right = 16.0
offset_bottom = 20.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="LifeHudP2" type="Node2D" parent="."]
position = Vector2(24, 144)

[node name="Title" type="Label" parent="LifeHudP2"]
offset_right = 16.0
offset_bottom = 8.0
text = "2P"
label_settings = ExtResource("6_7xq0w")

[node name="Lifes" type="Label" parent="LifeHudP2"]
offset_top = 12.0
offset_right = 16.0
offset_bottom = 20.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="LifeHudP3" type="Node2D" parent="."]
position = Vector2(296, 72)

[node name="Title" type="Label" parent="LifeHudP3"]
offset_right = 16.0
offset_bottom = 8.0
text = "3P"
label_settings = ExtResource("6_7xq0w")
metadata/_edit_use_anchors_ = true

[node name="Lifes" type="Label" parent="LifeHudP3"]
offset_top = 12.0
offset_right = 16.0
offset_bottom = 20.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")
metadata/_edit_use_anchors_ = true

[node name="LifeHudP4" type="Node2D" parent="."]
position = Vector2(296, 144)

[node name="Title" type="Label" parent="LifeHudP4"]
offset_right = 16.0
offset_bottom = 8.0
text = "4P"
label_settings = ExtResource("6_7xq0w")

[node name="Lifes" type="Label" parent="LifeHudP4"]
offset_top = 12.0
offset_right = 16.0
offset_bottom = 20.0
text = "00"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="StarsP1" type="Node2D" parent="."]
position = Vector2(24, 104)

[node name="Title" type="Label" parent="StarsP1"]
offset_right = 16.0
offset_bottom = 8.0
text = "1S"
label_settings = ExtResource("7_1rlcw")

[node name="Star" parent="StarsP1" instance=ExtResource("5_7jlme")]
position = Vector2(4, 12)
animation = &"super_level_1"

[node name="Value" type="Label" parent="StarsP1"]
offset_left = 10.0
offset_top = 9.0
offset_right = 18.0
offset_bottom = 17.0
text = "1"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="StarsP2" type="Node2D" parent="."]
position = Vector2(24, 176)

[node name="Title" type="Label" parent="StarsP2"]
offset_right = 16.0
offset_bottom = 8.0
text = "2S"
label_settings = ExtResource("7_1rlcw")

[node name="Star" parent="StarsP2" instance=ExtResource("5_7jlme")]
position = Vector2(4, 12)

[node name="Value" type="Label" parent="StarsP2"]
offset_left = 10.0
offset_top = 9.0
offset_right = 18.0
offset_bottom = 17.0
text = "1"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="StarsP3" type="Node2D" parent="."]
position = Vector2(296, 104)

[node name="Title" type="Label" parent="StarsP3"]
offset_right = 16.0
offset_bottom = 8.0
text = "3S"
label_settings = ExtResource("7_1rlcw")

[node name="Star" parent="StarsP3" instance=ExtResource("5_7jlme")]
position = Vector2(4, 12)

[node name="Value" type="Label" parent="StarsP3"]
offset_left = 10.0
offset_top = 9.0
offset_right = 18.0
offset_bottom = 17.0
text = "1"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="StarsP4" type="Node2D" parent="."]
position = Vector2(296, 176)

[node name="Title" type="Label" parent="StarsP4"]
offset_right = 16.0
offset_bottom = 8.0
text = "4S"
label_settings = ExtResource("7_1rlcw")

[node name="Star" parent="StarsP4" instance=ExtResource("5_7jlme")]
position = Vector2(4, 12)

[node name="Value" type="Label" parent="StarsP4"]
offset_left = 10.0
offset_top = 9.0
offset_right = 18.0
offset_bottom = 17.0
text = "1"
label_settings = SubResource("LabelSettings_1rlcw")

[node name="ScoreP1" type="Node2D" parent="."]
position = Vector2(16, 0)

[node name="Title" type="Label" parent="ScoreP1"]
offset_right = 24.0
offset_bottom = 16.0
text = "1P"
label_settings = ExtResource("7_jedst")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score" type="Label" parent="ScoreP1"]
offset_left = 24.0
offset_right = 144.0
offset_bottom = 16.0
text = "000000"
label_settings = SubResource("LabelSettings_1rlcw")
vertical_alignment = 1

[node name="ScoreP2" type="Node2D" parent="."]
position = Vector2(176, 0)

[node name="Title" type="Label" parent="ScoreP2"]
offset_right = 24.0
offset_bottom = 16.0
text = "2P"
label_settings = ExtResource("7_jedst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="ScoreP2"]
offset_left = 24.0
offset_right = 144.0
offset_bottom = 16.0
text = "000000"
label_settings = SubResource("LabelSettings_1rlcw")
vertical_alignment = 1

[node name="ScoreP3" type="Node2D" parent="."]
position = Vector2(16, 240)

[node name="Title" type="Label" parent="ScoreP3"]
offset_right = 24.0
offset_bottom = 16.0
text = "3P"
label_settings = ExtResource("7_jedst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="ScoreP3"]
offset_left = 24.0
offset_right = 144.0
offset_bottom = 16.0
text = "000000"
label_settings = SubResource("LabelSettings_1rlcw")
vertical_alignment = 1

[node name="ScoreP4" type="Node2D" parent="."]
position = Vector2(176, 240)

[node name="Title" type="Label" parent="ScoreP4"]
offset_right = 24.0
offset_bottom = 16.0
text = "4P"
label_settings = ExtResource("7_jedst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="ScoreP4"]
offset_left = 24.0
offset_right = 144.0
offset_bottom = 16.0
text = "000000"
label_settings = SubResource("LabelSettings_1rlcw")
vertical_alignment = 1
